# PolyglotRAG

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  dockerfile  dockerfile.dev
dev/: local.docker-compose.yml  local.yml  pgvec.docker-compose.yml  pgvec.yml
docs/: API_DOCUMENTATION.md
migrations/2025-05-12-190353_create_vector_extension/: down.sql  up.sql
migrations/2025-05-12-193751_create_items/: down.sql  up.sql
migrations/2025-05-12-201522_update_to_items/: down.sql  up.sql
migrations/2025-05-13-124020_search_queries/: down.sql  up.sql
migrations/2025-05-18-155230_update_to_vector_size/: down.sql  up.sql
migrations/2025-10-02-092838_create_processing_jobs/: down.sql  up.sql
src/: main.rs
src/application/: mod.rs
src/application/ports/: document_extractor.rs  embedding_provider.rs  file_storage.rs  job_queue.rs  mod.rs
src/application/services/: document_processor.rs  embedding_service.rs  search_service.rs
src/application/use_cases/: cancel_job.rs  get_file.rs  get_file_chunks.rs  get_job_status.rs  list_files.rs  mod.rs  process_document.rs  process_url_direct.rs  process_youtube_direct.rs  queue_processing_job.rs  search_content.rs  upload_file.rs  (+1 more)
src/core/: html_extractor.rs  mod.rs  youtube.rs
src/db/: mod.rs  models.rs  schema.rs
src/html/: html_extractor.rs  mod.rs
src/infrastructure/: container.rs  mod.rs
src/pdf/: mod.rs  pdf_extractor.rs
src/server/: errors.rs  mod.rs  router.rs  serializers.rs
src/service/: file_processor.rs  inference.rs  mod.rs  scheduler.rs  semantic_chunking.rs
(+71 files in other folders)
