[package]
name = "test-html-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["full"] }
html2text = "0.14.4"
url = "2.5.4"
lopdf = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"
