[package]
name = "document-extraction-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["full"] }
html2text = "0.14.4"
url = "2.5.4"
lopdf = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"
pgvector = { version = "0.4", features = ["diesel", "serde"] }
diesel = { version = "2.2.10", features = [
  "postgres",
  "chrono",
  "serde_json",
  "uuid",
  "r2d2",
] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
axum = { version = "0.8.4", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.6.1", features = ["cors", "trace", "limit"] }
sha2 = "0.10.9"
